<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CPU Spy</string>
    <string name="version_name">dev</string>
    <string name="TimeInState">Time in State</string>
    <string name="ErrorNoStatesFile">No states file found. Are you sure your phone is compatible?\n\nIf you are running a custom ROM or kernel, try contacting its developer to inform him that the states file is not readable.</string>
    <string name="UnusedCPUStates">Unused CPU states</string>
    <string name="TotalStateTime">Total State Time</string>
    <string name="KernelInfo">Kernel Info</string>
    <string name="Kernel">Kernel</string>
    <string name="DeepSleep">Deep Sleep</string>
    <string name="VersionTag"> v</string>
    <string name="MegaHertzTag"> MHz</string>
    <string name="ResetTimers">Reset Timers</string>
    <string name="RestoreTimers">Restore Timers</string>
    <string name="Refresh">Refresh</string>
    <string name="EnableLogging">Enable Logging</string>
    <string name="Quit">Quit Application</string>
</resources>
