<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >

           <TextView
               style="@style/infoHeader"
               android:text="@string/TimeInState"
               />

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ui_states_view"
               android:paddingBottom="10dp"
               />

           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:padding="15dp"
               android:textColor="#ffffff"
               android:textSize="20dp"
               android:background="#551111"
               android:text="@string/ErrorNoStatesFile"
               android:visibility="gone"
               android:id="@+id/ui_states_warning"
               />


           <TextView
               android:id="@+id/ui_header_additional_states"
               style="@style/infoHeader"
               android:visibility="gone"
               android:text="@string/UnusedCPUStates"
               />

           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:visibility="gone"
               android:id="@+id/ui_additional_states"
               android:padding="6dp"
               />

           <TextView
               android:id="@+id/ui_header_total_state_time"
               style="@style/infoHeader"
               android:text="@string/TotalStateTime"
               />

           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:textSize="25dp"
               android:textColor="#dddddd"
               android:padding="7dp"
               android:id="@+id/ui_total_state_time"
               android:gravity="center_horizontal"
               />

           <TextView
               style="@style/infoHeader"
               android:text="@string/KernelInfo"
               />


           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/Kernel"
               android:textSize="19dp"
               android:textColor="#dddddd"
               android:padding="10dp"
               android:id="@+id/ui_kernel_string"
               />
    </LinearLayout>
</ScrollView>